--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +32,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -61,7 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1",
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/react-modal": "^3.13.1"
   }
 }
