--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/x-date-pickers": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.3",
@@ -15,15 +17,18 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.13",
     "@types/react": "^18.0.28",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.13.1",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -61,7 +66,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1",
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/react-modal": "^3.13.1"
   }
 }
